Minor CSS changes to fix grid spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -143,7 +143,7 @@ a.ui.header:hover {
 }
 
 .decopacImage {
-	height: 150px !important;
+	height: 100px !important;
 	object-fit: contain;
 	background-color: white;
 }
@@ -179,6 +179,12 @@ hr {
 	border: 0;
 	height: 1px;
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(175, 175, 175, 0.75), rgba(0, 0, 0, 0));
+}
+
+.ui.three.cards > .card {
+    width: calc(33.33333333% - 1em);
+    margin-left: 0.5em;
+    margin-right: 0.5em;
 }
 
 /* @media only screen {
